endpoints reports
